syntax = "proto3";

option go_package = "./proto";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Merchant {
  int64 ID = 1;
  string Name = 2;
  string Email = 3;
  string Password = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp UpdatedAt = 6;
}

message MerchantCreateReq {
  string Name = 1;
  string Email = 2;
  string Password = 3;
}

message MerchantUpdateReq {
  int64 ID = 1;
  string Name = 2;
  string Email = 3;
  string Password = 4;
  QueryData Query = 5;
}

message MerchantID {
  int64 ID = 1;
}

message MerchantEmail {
  string Email = 1;
}

message DeleteReq {
  int64 ID = 1;
  QueryData Query = 2;
}

enum Role{
  MERCHANT = 0;
  CUSTOMER = 1;
}

message QueryData {
  int64 ID = 1;
  Role Role = 2 ;
}

service MerchantService {
  rpc FindOneByID(MerchantID) returns (Merchant);
  rpc FindOneByEmail(MerchantEmail) returns (Merchant);
  rpc FindAll(google.protobuf.Empty) returns (stream Merchant);
  rpc Create(MerchantCreateReq) returns (Merchant);
  rpc Update(MerchantUpdateReq) returns (Merchant);
  rpc Delete(DeleteReq) returns (google.protobuf.Empty);
}
